buildscript{
    ext{
        springBootVersion='2.1.7.RELEASE'
    }
    repositories {
        mavenCentral()
        jcenter()
    }
    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
    }
}
plugins{
    id 'com.google.cloud.tools.jib' version '1.0.0'
}

apply plugin:'java'
apply plugin:'eclipse'
apply plugin:'org.springframework.boot'
apply plugin: 'io.spring.dependency-management'

group 'com.pjh.share'
version '1.0-SNAPSHOT-'+new Date().format("yyyyMMddHHmmss")

sourceCompatibility = 1.8
ext.lombokVersion='1.18.4'
repositories {
    mavenCentral()
}

dependencies {
    compile('org.springframework.boot:spring-boot-starter-web')
    compile('org.springframework.boot:spring-boot-starter-data-jpa')
    compile('org.springframework.boot:spring-boot-starter-security')
    compile('com.h2database:h2')
    runtimeOnly 'mysql:mysql-connector-java'
    implementation 'org.springframework.boot:spring-boot-starter-reactor-netty'

    //websocket
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'org.webjars:sockjs-client:1.1.2'
    implementation 'org.webjars:stomp-websocket:2.3.3-1'




    //spring-data-redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.session:spring-session-data-redis'
    /*
    //embeded-redis
    compile group: 'it.ozimov', name: 'embedded-redis', version: '0.7.2'
     */

    //thymeleaf 의존성
    compile('org.springframework.boot:spring-boot-starter-mustache')
    compile('org.springframework.boot:spring-boot-starter-thymeleaf')
    compile('org.thymeleaf.extras:thymeleaf-extras-springsecurity5')
    compile('nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect')

    //mail 의존성
    compile("org.springframework.boot:spring-boot-starter-mail")
    compile("org.springframework:spring-context-support")
    compile("com.sun.mail:javax.mail")

    compileOnly("org.projectlombok:lombok:${lombokVersion}")
    testCompileOnly("org.projectlombok:lombok:${lombokVersion}")
    annotationProcessor("org.projectlombok:lombok:${lombokVersion}")
    testAnnotationProcessor("org.projectlombok:lombok:${lombokVersion}")

    testCompile('org.springframework.boot:spring-boot-starter-test'){
        exclude module: 'junit'
    }
    testCompile('org.springframework.security:spring-security-test')
    testImplementation('org.junit.jupiter:junit-jupiter-api:5.2.0')
    testCompile('org.junit.jupiter:junit-jupiter-params:5.2.0')
    testRuntime('org.junit.jupiter:junit-jupiter-engine:5.2.0')
    test {
        useJUnitPlatform()
    }
    //testCompile group: 'junit', name: 'junit', version: '4.12'
}
